--- a/config/config.yml
+++ b/config/config.yml
@@ -3,4 +3,4 @@ title: Home
 description: Meet Cruz. Web developer. Multiple-scholarship winner.
 keywords: cruz nunez ruby web developer north carolina nc software engineer iron yard code the dream
 twitter: cruz_a_nunez
-image: https://pbs.twimg.com/media/CRxurBzUEAA-88v.jpg:large
+image: https://i.imgur.com/2r1PIhf.jpg
