--- a/config/config.yml
+++ b/config/config.yml
@@ -1,6 +1,6 @@
 site: Cruz
 title: Home
-description: Meet Cruz. Web developer. Multiple-scholarship winner.
+description: Meet Cruz. Full-Stack Web Developer.
 keywords: cruz nunez ruby web developer north carolina nc software engineer iron yard code the dream
 twitter: cruz_a_nunez
 image: https://i.imgur.com/2r1PIhf.jpg
